Fix viewing a Discussion/Announcement overflow
Fixes: KNO-252

flag = responsive_2020_03

Test plan:
- Enable the responsive_2020_03 feature flag at the root
  or institution level
- Navigate to a Course
- Navigate to Dicussion
- Enter responsive mode
- Confirm there is no overflow for discussions
- Repeat for Annoucements

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/232436
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Daniel Sasaki <dsasaki@instructure.com>
Product-Review: Daniel Sasaki <dsasaki@instructure.com>

--- a/app/stylesheets/bundles/discussions.scss
+++ b/app/stylesheets/bundles/discussions.scss
@@ -702,3 +702,11 @@ $discussion-dark-text: $ic-color-dark;
     .topic-unsubscribe-button { display:inline-block; }
   }
 }
+
+@include mobile-only {
+  .responsive_2020_03 {
+    .discussion_subscribe {
+      width: inherit;
+    }
+  }
+}
